--- a/App.xaml
+++ b/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:NoteApplication"
+             xmlns:uc="clr-namespace:NoteApplication.View.UserControls"
              StartupUri="View/NewNotesWindow.xaml">
     <Application.Resources>
         <Style x:Key="_ListBoxItemStyle" TargetType="ListBoxItem">
@@ -15,14 +16,18 @@
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsSelected" Value="true">
-                                <Setter TargetName="_Border" Property="Background" Value="Yellow"/>
-                                <Setter Property="Foreground" Value="Red"/>
+                                <Setter TargetName="_Border" Property="BorderBrush" Value="#FFFFFCE6" />
+                                <Setter TargetName="_Border" Property="CornerRadius" Value="20,20,20,20" />
+                                <Setter TargetName="_Border" Property="BorderThickness" Value="4,4,4,4"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
+
+        
+
 
         <Style x:Key="MyWaterMarkStyle" TargetType="{x:Type TextBox}">
             <Setter Property="Template">
