Errors in WeatherViewModel because NotesVM refference is null. Few Changes ui

--- a/App.xaml
+++ b/App.xaml
@@ -25,6 +25,26 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style x:Key="_NotesListBoxItemStyle" TargetType="ListBoxItem">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ListBoxItem">
+                        <Border Name="_Border"
+                                Padding="2"
+                                SnapsToDevicePixels="true">
+                            <ContentPresenter />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="true">
+                                <Setter TargetName="_Border" Property="BorderBrush" Value="#FF650C46" />
+                                <Setter TargetName="_Border" Property="CornerRadius" Value="15,15,15,15" />
+                                <Setter TargetName="_Border" Property="BorderThickness" Value="3,0,0,0"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
 
         
 
